--- a/UI/package.json
+++ b/UI/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "./",
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "@stripe/react-stripe-js": "^2.8.0",
@@ -11,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "ra-data-simple-rest": "^5.3.0",
@@ -23,7 +25,6 @@
     "react-range-slider-input": "^3.0.7",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
-    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -52,6 +53,9 @@
   },
   "devDependencies": {
     "jwt-decode": "^4.0.0",
-    "tailwindcss": "^3.4.3"
+    "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.4.3",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   }
 }
